--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=LMSKPU-Hanif-Purwanto
 APP_ENV=local
-APP_KEY=base64:K6IEZycJA1hH5RSmA/WqXrBpIe/L6zv6DtF3B4tBI6U=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://lms.nhd.my.id
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=lms-kpu-hanif-purwanto
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_DATABASE=lms_app
+DB_USERNAME=lms_db
+DB_PASSWORD=[1eLXK5L>
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
